src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__for_range_inclusive_basic.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
for i in 0..=10 {
  i
}
}

OK
.fn @main
  params 0
  stack 3
  .locals
    i = r1
    i = r2
  .code
  0  lsmi r1, 0
  1  lsmi r2, 10
  2  isle r1, r2
  3  jmp 2   ; to 5
  4  forloop r1, -2   ; to 2
  5  lnil r0
  6  ret
