src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_bad.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
// callee _must_ exist, either as a variable,
// some kind of value, or as a function decl.

f()


ERROR
could not resolve name
4 |  f()
  |  ^
