src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_dyn.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
do {
// compiler can't know what function `c` is, it may not even
// be a function at all. so it emits a "dyn" call which performs
// type/arity checking at runtime.
fn f(c) { c() }
}

OK
.fn @main
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret

.fn f
  params 1
  stack 3
  .locals
    c = r1
  .code
  0  call r2, r1, 0   ; dyn
  1  retv r2
