src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_lexical_scope.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
// due to lexical scoping, a function may be called
// before it's been defined

f()

fn f() {}

OK
.fn @main
  params 0
  stack 2
  .code
  0  call r1, fn1   ; fn1=f
  1  lnil r0
  2  ret

.fn f
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
