src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_top_level.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
//module
fn f() {}

f()

OK
.fn @main
  params 0
  stack 1
  .code
  0  call r0, fn1   ; fn1=f
  1  ret

.fn f
  params 0
  stack 1
  .code
  0  lnil r0
  1  ret
