src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_unused_value.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
fn f(a, b, c) {}

// unused value with args, that means the call expr
// doesn't receive a register, and must allocate all
f(0, 1, 2)

nil


OK
.fn @main
  params 0
  stack 5
  .code
  0  lsmi r2, 0
  1  lsmi r3, 1
  2  lsmi r4, 2
  3  call r1, fn1   ; fn1=f
  4  lnil r0
  5  ret

.fn f
  params 3
  stack 4
  .locals
    a = r1
    b = r2
    c = r3
  .code
  0  lnil r0
  1  ret
