src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_value.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let v = 0

v()()


OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  mov r0, r1
  2  call r0, 0   ; dyn
  3  call r0, 0   ; dyn
  4  ret
