src/codegen/snapshots/hebi4__codegen__tests__tests__inputs__codegen__function_call_value_args.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
SOURCE
let v = 0

v(0)(0)

OK
.fn @main
  params 0
  stack 6
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  lsmi r5, 0
  2  call r4, r1, 1   ; dyn
  3  lsmi r3, 0
  4  call r2, r4, 1   ; dyn
  5  retv r2
